<resources>
    <string name="app_name">MyAppPortfolio</string>

    <string name="my_nanodegree_apps">My Nanodegree Apps!</string>

    <string name="spotify_streamer">SPOTIFY STREAMER</string>
    <string name="scores_app">SCORES APP</string>
    <string name="library_app">LIBRARY APP</string>
    <string name="build_it_bigger">BUILD IT BIGGER</string>
    <string name="xyz_reader">XYZ READER</string>
    <string name="capstone_my_own_app">CAPSTONE: MY OWN APP</string>

    <string name="spotify_toast">This button will launch spotify streamer app!</string>
    <string name="scores_toast">This button will launch scores app!</string>
    <string name="library_toast">This button will launch library app!</string>
    <string name="build_it_bigger_toast">This button will launch build it bigger app!</string>
    <string name="xyz_toast">This button will launch xyz reader app!</string>
    <string name="capstone_toast">This button will launch my capstone app!</string>

</resources>
