<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/activity_main_title_bottom_margin"
                android:text="@string/my_nanodegree_apps"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <Button
                android:id="@+id/spotify_streamer_button"
                style="@style/AppButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/spotify_streamer" />

            <Button
                android:id="@+id/scores_app_button"
                style="@style/AppButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/scores_app" />

            <Button
                android:id="@+id/library_app_button"
                style="@style/AppButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/library_app" />

            <Button
                android:id="@+id/build_it_bigger_button"
                style="@style/AppButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/build_it_bigger" />

            <Button
                android:id="@+id/xyz_reader_button"
                style="@style/AppButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/xyz_reader" />

            <Button
                android:id="@+id/my_own_app_button"
                style="@style/AppButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:text="@string/capstone_my_own_app" />

        </LinearLayout>

    </ScrollView>

</FrameLayout>
